--- a/Assets/style.css
+++ b/Assets/style.css
@@ -95,6 +95,7 @@ body {
     padding: 5px;
     border: 2px solid #000;
     border-radius: 5px;
+    border-color: black;
   }
   
   .historyItem:hover {
