--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,6 +1,7 @@
+
 body {
-    color: #070101;
-    background: white;
+    color: blue;
+    background: rgb(255, 255, 255);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
   
